优化了一些回复icloud数据后的问题

--- a/iOSProjectFramework/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/iOSProjectFramework/Localizable/zh-Hans.lproj/Localizable.strings
@@ -65,6 +65,9 @@
 "Take a break" = "开始休息";
 "Stop break" = "停止休息";
 
+"Refresh Config" = "刷新配置";
+
+
 //TotalStatistics
 "No data" = "暂无数据";
 "Today" = "今\n日";
